<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <!-- Expense Amount -->
        <TextView
            android:id="@+id/tv_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_100"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Currency -->
        <TextView
            android:id="@+id/tv_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/usd"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/tv_amount"
            app:layout_constraintTop_toTopOf="@+id/tv_amount" />

        <!-- Create Date -->
        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/_2025_03_18"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/gray"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_amount" />

        <!-- Category -->
        <com.google.android.material.chip.Chip
            android:id="@+id/ch_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food"
            android:fontFamily="@font/poppins_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Remark -->
        <TextView
            android:id="@+id/tv_remark"
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:layout_marginTop="4dp"
            android:padding="5dp"
            android:fontFamily="@font/poppins_medium"
            android:maxLines="2"
            android:text="@string/lunch_at_restaurant"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_date" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
