<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".WelcomeActivity">

    <ImageView
        android:id="@+id/iv_welcome"
        android:layout_width="330dp"
        android:layout_height="330dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_mad" />

    <TextView
        android:id="@+id/tv_welcome_title"
        style="@style/primaryTitle"
        android:layout_width="300dp"

        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/welcome_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_welcome" />

    <TextView
        android:id="@+id/tv_welcome_content"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/welcome_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome_title" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome_content">

        <Button
            android:id="@+id/btn_welcome_login"
            style="@style/primaryButtonStyle"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:fontFamily="@font/poppins_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_welcome_content" />

        <Button
            android:id="@+id/btn_welcome_register"
            style="@style/secondaryButtonStyle"
            android:layout_width="150dp"
            android:fontFamily="@font/poppins_medium"
            android:layout_height="wrap_content"
            android:text="@string/register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_welcome_login" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>