<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailExpenseActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewExpense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="#616161"
        android:elevation="8dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/categoryText"
                style="@style/my_name"
                android:fontFamily="@font/poppins_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/category"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_date"
                style="@style/my_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginBottom="20dp"
                android:text="@string/date"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/remarkText"
                style="@style/my_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginBottom="20dp"
                android:text="@string/remark"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/amountText"
                    style="@style/my_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amount"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/currencyText"
                    style="@style/my_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/currency"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Receipt Image -->
    <TextView
        android:id="@+id/text_Eeceipt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/receipt_image"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:fontFamily="@font/poppins_medium"
        android:layout_marginStart="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardViewExpense" />

    <ImageView
        android:id="@+id/imageViewReceipt"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext_background"
        android:contentDescription="@string/receipt_image"
        android:padding="20dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.204"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_Eeceipt" />

</androidx.constraintlayout.widget.ConstraintLayout>
